--- a/src/main/resources/templates/base/base_temp_parts.html
+++ b/src/main/resources/templates/base/base_temp_parts.html
@@ -19,7 +19,8 @@
                 MicroBlog: {
                     MICROBLOG_BASE: [[@{/ajax/microblog}]],
                     MICROBLOG_SPECIFIC: [[@{/ajax/microblog/{id}}]],
-                    MICROBLOG_LIKE: [[@{/ajax/microblog/like}]]
+                    MICROBLOG_LIKE: [[@{/ajax/microblog/like}]],
+                    MICROBLOG_USER: [[@{/ajax/user/{uid}/microblog}]]
                 },
                 Comment: {
                     COMMENT_BASE: [[@{/ajax/microblog/{mid}/comment}]]
