--- a/src/main/resources/static/static/css/main.css
+++ b/src/main/resources/static/static/css/main.css
@@ -138,6 +138,7 @@ body.bg-gradient {
     flex-direction: row;
     width: 100%;
     margin-top: 15px;
+    z-index: 1;
 }
 
 #c_right-content .wb_main_c {
