微博广场与关注用户的微博

--- a/src/main/resources/templates/base/base_temp_parts.html
+++ b/src/main/resources/templates/base/base_temp_parts.html
@@ -20,7 +20,8 @@
                     MICROBLOG_BASE: [[@{/ajax/microblog}]],
                     MICROBLOG_SPECIFIC: [[@{/ajax/microblog/{id}}]],
                     MICROBLOG_LIKE: [[@{/ajax/microblog/like}]],
-                    MICROBLOG_USER: [[@{/ajax/user/{uid}/microblog}]]
+                    MICROBLOG_USER: [[@{/ajax/user/{uid}/microblog}]],
+                    MICROBLOG_SUBSCRIBE: [[@{/ajax/microblog/subscribed}]]
                 },
                 Comment: {
                     COMMENT_BASE: [[@{/ajax/microblog/{mid}/comment}]]
