--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -6,19 +6,7 @@
 
 <div id="main-content">
 
-    <div id="header">
-
-        <div class="container">
-            <div id="header-search">
-                <h1 id="header-title" class="nav-brand"><a href="homepage.html">微博</a></h1>
-            </div>
-            <div id="header-nav">
-                <ul class="list-inline">
-                    <li class="nav-brand">首页</li>
-                </ul>
-            </div>
-        </div>
-    </div>
+    <div th:replace="homepage :: #header"></div>
 
     <div class="container">
 
