--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -59,7 +59,7 @@
 
 <div th:replace="base/base_temp_parts :: temp_footer"></div>
 
-<script>
+<script id="script-subscribe-user-from-userpage">
     require(['subscribe'], function (subscribe) {
         "use strict";
         var subBtn = document.querySelector("#subscribe-btn");
