--- a/src/main/resources/static/static/css/main.css
+++ b/src/main/resources/static/static/css/main.css
@@ -156,6 +156,11 @@ body.bg-gradient {
     margin-right: 10px;
 }
 
+#c_right-content > .fragment {
+    margin: 0 10px;
+    width: 100%;
+}
+
 .fragment {
     background-color: white;
     padding: 8px;
@@ -166,6 +171,15 @@ body.bg-gradient {
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
+}
+
+.fragment > .fragment-title {
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 2em;
+    padding: 0 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #bbb;
 }
 
 .input {
@@ -382,6 +396,8 @@ body.bg-gradient {
     float: left;
     width: 50px;
     height: 50px;
+    font-size: 15px;
+    text-align: center;
 }
 
 #c_left-user_info {
@@ -564,4 +580,26 @@ body.bg-gradient {
 
 .comment-control > .comment-delete {
     visibility: hidden;
+}
+
+.user-list {
+    width: 100%;
+    display: flex;
+    flex-direction:row;
+    flex-wrap: wrap;
+}
+
+.user-list > * {
+    width: 40%;
+    flex-grow: 1;
+    margin: 5px;
+    padding: 8px;
+}
+
+.user-card-detail {
+    margin-left: 70px;
+}
+
+.user-card-detail * {
+    line-height: 1em;
 }
